syntax = "proto3";

package rivet.backend.pkg.cluster.msg.server_install;

import "proto/common.proto";
import "proto/backend/cluster.proto";

/// name = "msg-cluster-server-install"
/// parameters = [
/// 	{ name = "public_ip" },
/// ]
message Message {
    string public_ip = 1;
    rivet.backend.cluster.PoolType pool_type = 2;
    // Only if installing on a "server" (see cluster database). Used to check if
    // the server is currently being deleted
    optional rivet.common.Uuid server_id = 3;
    // Simply passed to the install complete message
    rivet.backend.cluster.Provider provider = 4;
    optional string provider_api_token = 5;
    bool initialize_immediately = 6;
}
